deploy: 4c30a3609aa8fbcca97609d281f5df449c234674

--- a/master/install.html
+++ b/master/install.html
@@ -174,10 +174,11 @@ cargo install --path helix-term
 <p>Helix also needs it's runtime files so make sure to copy/symlink the <code>runtime/</code> directory into the
 config directory (for example <code>~/.config/helix/runtime</code> on Linux/macOS). This location can be overridden
 via the <code>HELIX_RUNTIME</code> environment variable.</p>
-<table><thead><tr><th>OS</th><th>command</th></tr></thead><tbody>
+<div class="table-wrapper"><table><thead><tr><th>OS</th><th>command</th></tr></thead><tbody>
 <tr><td>windows</td><td><code>xcopy runtime %AppData%/helix/runtime</code></td></tr>
 <tr><td>linux/macos</td><td><code>ln -s $PWD/runtime ~/.config/helix/runtime</code></td></tr>
 </tbody></table>
+</div>
 <h2 id="finishing-up-the-installation"><a class="header" href="#finishing-up-the-installation">Finishing up the installation</a></h2>
 <p>To make sure everything is set up as expected you should finally run the helix healthcheck via </p>
 <pre><code>hx --health
