--- a/master/themes.html
+++ b/master/themes.html
@@ -169,7 +169,7 @@ so you should define the palette after normal theme options.</p>
 <p>The default palette uses the terminal's default 16 colors, and the colors names
 are listed below. The <code>[palette]</code> section in the config file takes precedence
 over it and is merged into the default palette.</p>
-<table><thead><tr><th>Color Name</th></tr></thead><tbody>
+<div class="table-wrapper"><table><thead><tr><th>Color Name</th></tr></thead><tbody>
 <tr><td><code>black</code></td></tr>
 <tr><td><code>red</code></td></tr>
 <tr><td><code>green</code></td></tr>
@@ -187,10 +187,11 @@ over it and is merged into the default palette.</p>
 <tr><td><code>light-gray</code></td></tr>
 <tr><td><code>white</code></td></tr>
 </tbody></table>
+</div>
 <h3 id="modifiers"><a class="header" href="#modifiers">Modifiers</a></h3>
 <p>The following values may be used as modifiers. </p>
 <p>Less common modifiers might not be supported by your terminal emulator.</p>
-<table><thead><tr><th>Modifier</th></tr></thead><tbody>
+<div class="table-wrapper"><table><thead><tr><th>Modifier</th></tr></thead><tbody>
 <tr><td><code>bold</code></td></tr>
 <tr><td><code>dim</code></td></tr>
 <tr><td><code>italic</code></td></tr>
@@ -201,6 +202,7 @@ over it and is merged into the default palette.</p>
 <tr><td><code>hidden</code></td></tr>
 <tr><td><code>crossed_out</code></td></tr>
 </tbody></table>
+</div>
 <h3 id="scopes"><a class="header" href="#scopes">Scopes</a></h3>
 <p>The following is a list of scopes available to use for styling.</p>
 <h4 id="syntax-highlighting"><a class="header" href="#syntax-highlighting">Syntax highlighting</a></h4>
@@ -399,7 +401,7 @@ over it and is merged into the default palette.</p>
 </ul>
 </li>
 </ul>
-<table><thead><tr><th>Key</th><th>Notes</th></tr></thead><tbody>
+<div class="table-wrapper"><table><thead><tr><th>Key</th><th>Notes</th></tr></thead><tbody>
 <tr><td><code>ui.background</code></td><td></td></tr>
 <tr><td><code>ui.background.separator</code></td><td>Picker separator below input line</td></tr>
 <tr><td><code>ui.cursor</code></td><td></td></tr>
@@ -441,7 +443,7 @@ over it and is merged into the default palette.</p>
 <tr><td><code>diagnostic.warning</code></td><td>Diagnostics warning (editing area)</td></tr>
 <tr><td><code>diagnostic.error</code></td><td>Diagnostics error (editing area)</td></tr>
 </tbody></table>
-
+</div>
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
