--- a/master/print.html
+++ b/master/print.html
@@ -160,8 +160,11 @@ brew install helix
 the project root. The flake can also be used to spin up a reproducible development
 shell for working on Helix with <code>nix develop</code>.</p>
 <p>Flake outputs are cached for each push to master using
-<a href="https://www.cachix.org/">Cachix</a>. With Cachix
-<a href="https://docs.cachix.org/installation">installed</a>, <code>cachix use helix</code> will
+<a href="https://www.cachix.org/">Cachix</a>. The flake is configured to
+automatically make use of this cache assuming the user accepts
+the new settings on first use.</p>
+<p>If you are using a version of Nix without flakes enabled you can
+<a href="https://docs.cachix.org/installation">install Cachix cli</a>; <code>cachix use helix</code> will
 configure Nix to use cached outputs when possible.</p>
 <h3 id="arch-linux"><a class="header" href="#arch-linux">Arch Linux</a></h3>
 <p>Releases are available in the <code>community</code> repository.</p>
