--- a/master/print.html
+++ b/master/print.html
@@ -658,6 +658,7 @@ you to selectively add search terms to your selections.</p>
 <tr><td><code>Enter</code></td><td>Open selected</td></tr>
 <tr><td><code>Ctrl-s</code></td><td>Open horizontally</td></tr>
 <tr><td><code>Ctrl-v</code></td><td>Open vertically</td></tr>
+<tr><td><code>Ctrl-t</code></td><td>Toggle preview</td></tr>
 <tr><td><code>Escape</code>, <code>Ctrl-c</code></td><td>Close picker</td></tr>
 </tbody></table>
 </div>
