--- a/master/print.html
+++ b/master/print.html
@@ -339,9 +339,43 @@ and therefore requires the corresponding query file to work properly.</p>
 </blockquote>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="keymap"><a class="header" href="#keymap">Keymap</a></h1>
 <ul>
-<li>Mappings marked (<strong>LSP</strong>) require an active language server for the file.</li>
-<li>Mappings marked (<strong>TS</strong>) require a tree-sitter grammar for the filetype.</li>
+<li><a href="keymap.html#normal-mode">Normal mode</a>
+<ul>
+<li><a href="keymap.html#movement">Movement</a></li>
+<li><a href="keymap.html#changes">Changes</a>
+<ul>
+<li><a href="keymap.html#shell">Shell</a></li>
 </ul>
+</li>
+<li><a href="keymap.html#selection-manipulation">Selection manipulation</a></li>
+<li><a href="keymap.html#search">Search</a></li>
+<li><a href="keymap.html#minor-modes">Minor modes</a>
+<ul>
+<li><a href="keymap.html#view-mode">View mode</a></li>
+<li><a href="keymap.html#goto-mode">Goto mode</a></li>
+<li><a href="keymap.html#match-mode">Match mode</a></li>
+<li><a href="keymap.html#window-mode">Window mode</a></li>
+<li><a href="keymap.html#space-mode">Space mode</a>
+<ul>
+<li><a href="keymap.html#popup">Popup</a></li>
+</ul>
+</li>
+<li><a href="keymap.html#unimpaired">Unimpaired</a></li>
+</ul>
+</li>
+</ul>
+</li>
+<li><a href="keymap.html#insert-mode">Insert Mode</a></li>
+<li><a href="keymap.html#select--extend-mode">Select / extend mode</a></li>
+<li><a href="keymap.html#picker">Picker</a></li>
+<li><a href="keymap.html#prompt">Prompt</a></li>
+</ul>
+<blockquote>
+<p>💡 Mappings marked (<strong>LSP</strong>) require an active language server for the file.</p>
+</blockquote>
+<blockquote>
+<p>💡 Mappings marked (<strong>TS</strong>) require a tree-sitter grammar for the filetype.</p>
+</blockquote>
 <h2 id="normal-mode"><a class="header" href="#normal-mode">Normal mode</a></h2>
 <h3 id="movement"><a class="header" href="#movement">Movement</a></h3>
 <blockquote>
@@ -646,7 +680,7 @@ selection and select the next instance of the search term. Toggling this
 mode before pressing <code>n</code> or <code>N</code> makes it possible to keep the current
 selection. Toggling it on and off during your iterative searching allows
 you to selectively add search terms to your selections.</p>
-<h1 id="picker"><a class="header" href="#picker">Picker</a></h1>
+<h2 id="picker"><a class="header" href="#picker">Picker</a></h2>
 <p>Keys to use within picker. Remapping currently not supported.</p>
 <div class="table-wrapper"><table><thead><tr><th>Key</th><th>Description</th></tr></thead><tbody>
 <tr><td><code>Up</code>, <code>Ctrl-p</code></td><td>Previous entry</td></tr>
@@ -663,7 +697,7 @@ you to selectively add search terms to your selections.</p>
 <tr><td><code>Escape</code>, <code>Ctrl-c</code></td><td>Close picker</td></tr>
 </tbody></table>
 </div>
-<h1 id="prompt"><a class="header" href="#prompt">Prompt</a></h1>
+<h2 id="prompt"><a class="header" href="#prompt">Prompt</a></h2>
 <p>Keys to use within prompt, Remapping currently not supported.</p>
 <div class="table-wrapper"><table><thead><tr><th>Key</th><th>Description</th></tr></thead><tbody>
 <tr><td><code>Escape</code>, <code>Ctrl-c</code></td><td>Close prompt</td></tr>
